--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cloud_firestore: ^0.14.1+3
   modal_progress_hud: ^0.1.3
   file_picker: ^2.1.4
+  image: ^2.1.19
 
 
 dev_dependencies:
