--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
-  firebase_core: ^0.5.0+1
-  firebase_auth: ^0.18.1+2
-  cloud_firestore: ^0.14.1+3
+  firebase_core: ^0.5.3
+  firebase_auth: ^0.18.4+1
+  cloud_firestore: ^0.14.4
   modal_progress_hud: ^0.1.3
   file_picker: ^2.1.4
   image: ^2.1.19
+  flutter_session: ^0.1.1
+
 
   #state management
   stacked : ^1.2.2
