--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_session: ^0.1.1
   whatsapp_unilink: ^1.0.0+1
   url_launcher: ^5.7.10
+  carousel_slider: ^3.0.0
 
   #state management
   stacked : ^1.2.2
@@ -56,6 +57,8 @@ dependencies:
 
 
 
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -63,6 +66,8 @@ dev_dependencies:
   build_runner:
   auto_route_generator:
   injectable_generator:
+#dependency_overrides:
+  #analyzer: '0.39.14'
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -90,6 +95,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Lobster
+      fonts:
+        - asset: fonts/Lobster-Regular.ttf
+
+    - family: Handlee
+      fonts:
+        - asset: fonts/Handlee-Regular.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
