--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,6 +104,9 @@ flutter:
     - family: Handlee
       fonts:
         - asset: fonts/Handlee-Regular.ttf
+    - family: Roboto
+      fonts:
+        - asset: fonts/Roboto-Regular.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
