--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   url_launcher: ^5.7.10
   carousel_slider: ^3.0.0
   scroll_to_id: ^1.4.0
+  font_awesome_flutter: ^8.11.0
+  flutter_speed_dial: ^2.1.1
 
   #state management
   stacked : ^1.2.2
