--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   font_awesome_flutter: ^8.11.0
   animated_text_kit: 3.1.2
   smooth_scroll_web: ^0.0.4
+  pinch_zoom: ^0.1.0
+  photo_view: 0.10.3
 
   #state management
   stacked : ^1.2.2
